jasper/force-app/main/default/objects/Order/fields/Waiting_Periods__c.field-meta.xml
<CustomField>
    <fullName>Waiting_Periods__c</fullName>
    <label>Waiting Period Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Weeks</fullName>
                <default>true</default>
                <label>Weeks</label>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>3 Week</fullName>
                <isActive>false</isActive>
                <label>3 Week</label>
            </value>
            <value>
                <fullName>5 Month</fullName>
                <isActive>false</isActive>
                <label>5 Month</label>
            </value>
            <value>
                <fullName>Year</fullName>
                <isActive>false</isActive>
                <label>Year</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>