jasper/force-app/main/default/objects/Order/fields/Warranty_Amount__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Amount__c</fullName>
    <label>Warranty Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>