jasper/force-app/main/default/objects/Order/fields/Warranty_Term__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warranty Term</label>
    <referenceTo>WarrantyTerm</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>