jasper/force-app/main/default/objects/Order/fields/Website_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Website_Order_Id__c</fullName>
    <externalId>true</externalId>
    <label>Order Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>