jasper/force-app/main/default/objects/Order/fields/Website_Response_Id__c.field-meta.xml
<CustomField>
    <fullName>Website_Response_Id__c</fullName>
    <label>Website Response Id</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>