jasper/force-app/main/default/objects/Order/recordTypes/OTC.recordType-meta.xml
<RecordType>
    <fullName>OTC</fullName>
    <active>true</active>
    <label>OTC</label>
</RecordType>