jasper/force-app/main/default/objects/Order/recordTypes/Vehicle.recordType-meta.xml
<RecordType>
    <fullName>Vehicle</fullName>
    <active>true</active>
    <label>Vehicle</label>
</RecordType>