jasper/force-app/main/default/objects/Order/validationRules/Assigned_Vehicle_cannot_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Assigned_Vehicle_cannot_be_blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    Record_Type_Name__c = &apos;Vehicle&apos;,
    ISBLANK(Assigned_Vehicle__c),
    Grand_Total__c &gt; 100000,
    OR(
        ISPICKVAL(Status, &quot;Pre Invoice&quot;),
        ISPICKVAL(Status, &quot;RTO Registration&quot;),
        ISPICKVAL(Status, &quot;Ready For Delivery&quot;),
        ISPICKVAL(Status, &quot;Vehicle Delivered&quot;))
)</errorConditionFormula>
    <errorDisplayField>Assigned_Vehicle__c</errorDisplayField>
    <errorMessage>Assigned Vehicle cannot be blank</errorMessage>
</ValidationRule>