jasper/force-app/main/default/objects/Order/validationRules/Cancellation_Reason_is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancellation_Reason_is_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status, &quot;Order Cancelled&quot;),
    ISCHANGED(Status),
    ISBLANK(Reason_for_Cancellation__c)
)</errorConditionFormula>
    <errorMessage>Reason for cancellation is mandatory</errorMessage>
</ValidationRule>