jasper/force-app/main/default/objects/Order/validationRules/Cannot_Assign_vehicle_after_removal.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Assign_vehicle_after_removal</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISCHANGED(Assigned_Vehicle__c), 
    ISBLANK(PRIORVALUE(Assigned_Vehicle__c)),
    NOT(ISBLANK(Assigned_Vehicle__c)), 
    OR( 
        ISPICKVAL(Status, &quot;Allotment in Process&quot;),
        ISPICKVAL(Status, &quot;RTO Registration&quot;),
        ISPICKVAL(Status, &quot;Ready For Delivery&quot;),
        ISPICKVAL(Status, &quot;Vehicle Delivered&quot;),
        ISPICKVAL(Status, &quot;Order Cancelled&quot;)
    )
)</errorConditionFormula>
    <errorDisplayField>Assigned_Vehicle__c</errorDisplayField>
    <errorMessage>You cannot assign Vehicle once it is removed</errorMessage>
</ValidationRule>