jasper/force-app/main/default/objects/Order/validationRules/Discount_must_less_than_price_of_Parts.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_must_less_than_price_of_Parts</fullName>
    <active>false</active>
    <errorConditionFormula>Accessories_Discount_Amount__c  &gt;   ( TotalAmount + Total_Accessories_GST__c)</errorConditionFormula>
    <errorDisplayField>Accessories_Discount_Amount__c</errorDisplayField>
    <errorMessage>Discount amount must be less than the total price of the parts/accessories</errorMessage>
</ValidationRule>