jasper/force-app/main/default/objects/Order/validationRules/EMI_amount_should_not_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>EMI_amount_should_not_be_blank</fullName>
    <active>true</active>
    <errorConditionFormula>OR(AND(NOT(ISPICKVAL(Finance_Name__c, &apos;&apos;)     ),ISBLANK(EMI_Amount__c)),EMI_Amount__c == 0)</errorConditionFormula>
    <errorMessage>EMI Amount shouldn&apos;r be empty or Zero</errorMessage>
</ValidationRule>