jasper/force-app/main/default/objects/Order/validationRules/Employee_Id_Should_Not_Be_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>Employee_Id_Should_Not_Be_Null</fullName>
    <active>true</active>
    <description>Employee Id Should not be null when Employee Discount is Added</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Offers_Amount__c)), 
    Offers_Amount__c &gt;= 20000,
    ISBLANK(Employee_Id__c),
    $Profile.Name &lt;&gt; &quot;System Administrator&quot;
)</errorConditionFormula>
    <errorDisplayField>Employee_Id__c</errorDisplayField>
    <errorMessage>Employee Id Is Mandatory</errorMessage>
</ValidationRule>