jasper/force-app/main/default/objects/Order/validationRules/Finance_amount_cannot_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Finance_amount_cannot_be_blank</fullName>
    <active>true</active>
    <errorConditionFormula>OR(AND(NOT(ISPICKVAL( Finance_Name__c , &apos;&apos;) ),ISBLANK(Financed_Amount__c)),Financed_Amount__c == 0)</errorConditionFormula>
    <errorMessage>Finance amount shouldn&apos;t be blank or Zero</errorMessage>
</ValidationRule>