jasper/force-app/main/default/objects/Order/validationRules/Financed_amount_field_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Financed_amount_field_is_mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>IF(  NOT(  ISPICKVAL( Finance_Name__c , &apos;&apos;)  )  ,  ISBLANK( Financed_Amount__c ),NULL )</errorConditionFormula>
    <errorDisplayField>Financed_Amount__c</errorDisplayField>
    <errorMessage>Financed Amount is a required field.</errorMessage>
</ValidationRule>