jasper/force-app/main/default/objects/Order/validationRules/Offer_Amount_less_than_Vehicle_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Offer_Amount_less_than_Vehicle_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(ISNEW()) , (Vehicle_Subtotal__c  &lt;  Offers_Amount__c))</errorConditionFormula>
    <errorDisplayField>Offers_Amount__c</errorDisplayField>
    <errorMessage>Offer amount must be less than the Total price of the Vehicle</errorMessage>
</ValidationRule>