jasper/force-app/main/default/objects/Order/validationRules/Order_product_cannot_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_product_cannot_empty</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT(OR(ISPICKVAL( Status , &quot;Draft&quot;),ISPICKVAL(Status , &quot;Processing&quot;),ISPICKVAL( Status , &quot;Activated&quot;))),( Order_prod_count__c =0), Record_Type_Name__c =&apos;Vehicle&apos;)</errorConditionFormula>
    <errorDisplayField>Accessories_Discount_Amount__c</errorDisplayField>
    <errorMessage>You cannot process without order product</errorMessage>
</ValidationRule>