jasper/force-app/main/default/objects/Order/validationRules/Payment_Is_Pending_OTC.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Is_Pending_OTC</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISPICKVAL(Payment_Status__c, &apos;Completed&apos;)),
    ISPICKVAL(Status, &apos;Completed&apos;),
    $RecordType.DeveloperName = &apos;OTC&apos;
)</errorConditionFormula>
    <errorMessage>Payment is Pending</errorMessage>
</ValidationRule>