jasper/force-app/main/default/objects/Order/validationRules/Pre_Invoice_stage_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Pre_Invoice_stage_rule</fullName>
    <active>false</active>
    <description>Payment should be completed before the pre invoice stage</description>
    <errorConditionFormula>AND(

    $RecordType.DeveloperName = &quot;Vehicle&quot;,

    NOT(ISPICKVAL(Payment_Status__c , &quot;Completed&quot;)),

    OR(

        ISPICKVAL(Status, &quot;Pre Invoice&quot;),

        ISPICKVAL(Status, &quot;RTO Registration&quot;),

        ISPICKVAL(Status, &quot;Ready For Delivery&quot;),

        ISPICKVAL(Status, &quot;Vehicle Delivered&quot;)

    )

)</errorConditionFormula>
    <errorMessage>Payment is pending.</errorMessage>
</ValidationRule>