jasper/force-app/main/default/objects/Order/validationRules/Prevent_Accessories_discount.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Accessories_discount</fullName>
    <active>false</active>
    <errorConditionFormula>OR(NOT(ISBLANK( Accessories_Discount_Amount__c )), NOT(Accessories_Discount_Amount__c == 0))</errorConditionFormula>
    <errorDisplayField>Accessories_Discount_Amount__c</errorDisplayField>
    <errorMessage>Accessories Discount is not allowed</errorMessage>
</ValidationRule>