jasper/force-app/main/default/objects/Order/validationRules/Prevent_creating_customer_order_without.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_creating_customer_order_without</fullName>
    <active>false</active>
    <errorConditionFormula>RecordTypeId = &apos;012J4000001108b&apos; &amp;&amp;  ISBLANK( City__c )</errorConditionFormula>
    <errorDisplayField>City__c</errorDisplayField>
    <errorMessage>City field shouldn&apos;t be blank</errorMessage>
</ValidationRule>