jasper/force-app/main/default/objects/Order/validationRules/Product_is_not_been_added.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_is_not_been_added</fullName>
    <active>false</active>
    <errorConditionFormula>AND ( Record_Type_Name__c = &apos;Vehicle&apos;,
Grand_Total__c = 0,!ISPICKVAL(Status, &apos;Draft&apos;))</errorConditionFormula>
    <errorMessage>Add Order product before proceeding further</errorMessage>
</ValidationRule>