jasper/force-app/main/default/objects/Order/validationRules/Ready_for_delivery_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Ready_for_delivery_validation</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
AND(
    
        OR(
            ISPICKVAL(Status, &quot;Allotment in Process&quot;),
            ISPICKVAL(Status, &quot;Payment Pending&quot;),
            ISPICKVAL(Status, &quot;Processing&quot;),
            ISPICKVAL(Status, &quot;Activated&quot;),
            ISPICKVAL(Status, &quot;Draft&quot;)
        ),
    
    OR(
        ISPICKVAL(PRIORVALUE(Status), &quot;Rto Registration&quot;)
    )
),

AND(
    
        OR(
            ISPICKVAL(Status, &quot;Allotment in Process&quot;),
            ISPICKVAL(Status, &quot;Payment Pending&quot;),
            ISPICKVAL(Status, &quot;Processing&quot;),
            ISPICKVAL(Status, &quot;Activated&quot;),
            ISPICKVAL(Status, &quot;Draft&quot;),
            ISPICKVAL(Status, &quot;Rto Registration&quot;),
            ISPICKVAL(Status, &quot;Ready For Delivery&quot;)
        ),
    OR(
        ISPICKVAL(PRIORVALUE(Status), &quot;Vehicle Delivered&quot;)
    )
),

AND(
    
        OR(
            ISPICKVAL(Status, &quot;Allotment in Process&quot;),
            ISPICKVAL(Status, &quot;Payment Pending&quot;),
            ISPICKVAL(Status, &quot;Processing&quot;),
            ISPICKVAL(Status, &quot;Activated&quot;),
            ISPICKVAL(Status, &quot;Draft&quot;),
            ISPICKVAL(Status, &quot;Rto Registration&quot;)
        ),
    OR(
        ISPICKVAL(PRIORVALUE(Status), &quot;Ready For Delivery&quot;)
    )
)

)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>You can not select previous stages!</errorMessage>
</ValidationRule>