jasper/force-app/main/default/objects/Order/validationRules/RTO_Validation_for_Cancellation.validationRule-meta.xml
<ValidationRule>
    <fullName>RTO_Validation_for_Cancellation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(Status),
    ISPICKVAL(Status, &quot;Cancellation Requested&quot;),
    AND(
        PRIORVALUE(Status) &lt;&gt; &quot;RTO Registration&quot;,
        ISBLANK(Reason_for_Cancellation__c)
    )
)</errorConditionFormula>
    <errorMessage>The Prior Status Needs to be RTO Registration and Reason for Cancellation should not be blank</errorMessage>
</ValidationRule>