jasper/force-app/main/default/objects/Order/validationRules/Vehicle_Is_Ready_To_Deliver_Condition.validationRule-meta.xml
<ValidationRule>
    <fullName>Vehicle_Is_Ready_To_Deliver_Condition</fullName>
    <active>true</active>
    <description>ISPICKVAL(Status, &quot;Allotment in Process&quot;),
        ISPICKVAL(Status, &quot;Pre Invoice&quot;),</description>
    <errorConditionFormula>AND(
     $RecordType.Name = &apos;Vehicle&apos;,
    OR(
        ISPICKVAL(Status, &quot;Ready For Delivery&quot;),
        ISPICKVAL(Status, &quot;RTO Registration&quot;),
        ISPICKVAL(Status, &quot;Vehicle Delivered&quot;),
        ISPICKVAL(Status, &quot;Allotment in Process&quot;),
        ISPICKVAL(Status, &quot;Pre Invoice&quot;)
    ),
    Remaining_Amount__c &gt; 0
)</errorConditionFormula>
    <errorDisplayField>Payment_Status__c</errorDisplayField>
    <errorMessage>Payment must be Completed</errorMessage>
</ValidationRule>