jasper/force-app/main/default/objects/Order/listViews/All_OTC_Orders.listView-meta.xml
<ListView>
    <fullName>All_OTC_Orders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Type_Name__c</field>
        <operation>equals</operation>
        <value>OTC</value>
    </filters>
    <label>All OTC Orders</label>
</ListView>