jasper/force-app/main/default/objects/Order/listViews/AllActivatedOrders.listView-meta.xml
<ListView>
    <fullName>AllActivatedOrders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>Purchase_Order__c</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>Total_Amount1__c</columns>
    <columns>PO_Tax__c</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <columns>Dealer__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS_CODE</field>
        <operation>equals</operation>
        <value>A</value>
    </filters>
    <filters>
        <field>ORDERS.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2025 12:00 AM</value>
    </filters>
    <label>All Activated Orders</label>
</ListView>