jasper/force-app/main/default/objects/Order/listViews/Customer_Order.listView-meta.xml
<ListView>
    <fullName>Customer_Order</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>Purchase_Order__c</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>PO_Grand_Total__c</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>Record_Type_Name__c</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Type_Name__c</field>
        <operation>equals</operation>
        <value>Vehicle</value>
    </filters>
    <filters>
        <field>Color__c</field>
        <operation>equals</operation>
        <value>Winter white</value>
    </filters>
    <label>Customer Order</label>
</ListView>