jasper/force-app/main/default/objects/Order/listViews/HO_OTC_ORDERS.listView-meta.xml
<ListView>
    <fullName>HO_OTC_ORDERS</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Dealer__c</field>
        <operation>contains</operation>
        <value>HO</value>
    </filters>
    <label>HO Otc Orders</label>
</ListView>