jasper/force-app/main/default/objects/Order/listViews/Purchase_Order.listView-meta.xml
<ListView>
    <fullName>Purchase_Order</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>Purchase_Order__c</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>PO_Grand_Total__c</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>Record_Type_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Type_Name__c</field>
        <operation>equals</operation>
        <value>Purchase</value>
    </filters>
    <filters>
        <field>SALES.ACCOUNT.NAME</field>
        <operation>notEqual</operation>
    </filters>
    <label>Purchase Order</label>
</ListView>