jasper/force-app/main/default/objects/Order/listViews/Today_s_Orders.listView-meta.xml
<ListView>
    <fullName>Today_s_Orders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>Purchase_Order__c</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>Total_Amount1__c</columns>
    <columns>PO_Tax__c</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s Orders</label>
</ListView>